Added Socket.io for real time communication, BG locale and lots of UI and functionality changes

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,11 +1,22 @@
 {
 	"translation": {
         "common": {
-            "continue": "Continue"
+            "continue": "Continue",
+            "cancel": "Cancel"
         },
         "login": {
             "needAnAccount": "Need an account?",
             "welcomeBack": "Welcome Back!"
-        }
+        },
+        "dashboard": {
+			"createServer": "Create Server",
+			"createCategory": "Create Category",
+			"createChannel": "Create Channel",
+			"editServer": "Edit Server",
+			"editCategory": "Edit Category",
+			"editChannel": "Edit Channel",
+			"joinServer": "Join Server",
+			"members": "Members"
+		}
 	}
 }
